test/bad/eps1.pacc
/*
nopacc 5:10 'expected Defns, or end-of-input'
*/

S ← ε "foo"
